[gd_scene load_steps=2 format=3 uid="uid://main"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="FlashOverlay" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
color = Color(0.92, 0.96, 1, 0)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HudLabel" type="Label" parent="UI"]
offset_left = 12.0
offset_top = 12.0
text = "Survive."

[node name="EndPanel" type="Panel" parent="UI"]
visible = false
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EndPanel"]
layout_mode = 2
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
alignment = 1

[node name="TimeLabel" type="Label" parent="UI/EndPanel/VBoxContainer"]
text = "Time survived: 0.00 s"

[node name="DisturbanceLabel" type="Label" parent="UI/EndPanel/VBoxContainer"]
text = "Disturbances: 0"

[node name="LastDisturbanceLabel" type="Label" parent="UI/EndPanel/VBoxContainer"]
text = "Last disturbance at: (none)"

[node name="MessageLabel" type="Label" parent="UI/EndPanel/VBoxContainer"]
text = "You didnâ€™t have to."
